@@ -223,7 +223,7 @@ public class HyperTableColumn
 
       if (table.getCanAddRows())
       {
-        HyperTableRow lastRow = table.getRows().get(table.getRows().size() - 1);
+        HyperTableRow lastRow = table.getRows().getLast();
 
         if (lastRow.getCell(colNdx) == cell1)
           return tc.getSortType() == SortType.ASCENDING ? 1 : -1;
